...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="riB-S5-Yyj">
                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="18"/>
                                <state key="normal" title="START"/>
                                <connections>
                                    <action selector="buttonGoTapped:" destination="rPp-Ia-3FB" eventType="touchUpInside" id="oP3-US-xdD"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mJT-r1-aAd">
                                <color key="backgroundColor" red="0.91764705879999997" green="0.4941176471" blue="0.50196078430000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="mJT-r1-aAd" secondAttribute="height" multiplier="132:19" id="bVY-Xx-HhQ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="15"/>
                                <state key="normal" title="OK">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <variation key="heightClass=regular-widthClass=compact">
                                    <fontDescription key="fontDescription" type="system" weight="black" pointSize="15"/>
                                </variation>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sUV-S2-8Wg">
                                <color key="backgroundColor" red="0.91764705882352937" green="0.49411764705882355" blue="0.50196078431372548" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="sUV-S2-8Wg" secondAttribute="height" multiplier="132:19" id="mkX-qp-d5G"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="15"/>
                                <state key="normal" title="PLAY GAME">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <variation key="heightClass=regular-widthClass=compact">
                                    <fontDescription key="fontDescription" type="system" weight="black" pointSize="15"/>
                                </variation>
                                <variation key="heightClass=regular-widthClass=regular">
...
